--- a/classes/MappedinLocation.html
+++ b/classes/MappedinLocation.html
@@ -81,7 +81,7 @@
                     <li class="panel panel-default">
                         <div class="panel-heading" role="tab" id="sidebar-version-heading">
                             <h4 class="panel-title">
-                                  Version: 1.55.1
+                                  Version: 1.69.0
                                 </a>
                             </h4>
                         </div>
@@ -171,9 +171,6 @@
                                         <a href="../classes/MapView2D.html">MapView2D</a>
                                     </li>
                                     <li>
-                                        <a href="../classes/MapView3D.html">MapView3D</a>
-                                    </li>
-                                    <li>
                                         <a href="../classes/Marker.html">Marker</a>
                                     </li>
                                     <li>
@@ -186,7 +183,16 @@
                                         <a href="../classes/SmartLabel.html">SmartLabel</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/SmartLabelBatchCreator.html">SmartLabelBatchCreator</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/TextLabel.html">TextLabel</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/ThreeJSMarkerHandle.html">ThreeJSMarkerHandle</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/Tooltip.html">Tooltip</a>
                                     </li>
                                     <li>
                                         <a href="../classes/Tween.html">Tween</a>
@@ -291,6 +297,10 @@ For example, all washroom at a given Venue could belong to one Location, or a de
 
                               </li>
                               <li class="index-item property">
+                                  <a href="#property_nodeOperationHours">nodeOperationHours</a>
+
+                              </li>
+                              <li class="index-item property">
                                   <a href="#property_nodes">nodes</a>
 
                               </li>
@@ -377,15 +387,6 @@ For example, all washroom at a given Venue could belong to one Location, or a de
   									<span class="flag optional" title="This parameter is optional.">optional</span>
   
   								<div class="param-description"><p>True if directions should be wheelchair accessible.</p>
-  </div>
-  
-  							</li>
-  							<li class="param">
-  									<code class="param-name optional">[directionsProvider=&quot;online&quot;]</code>
-  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" class="crosslink external" target="_blank">String</a></span>
-  									<span class="flag optional" title="This parameter is optional.">optional</span>
-  
-  								<div class="param-description"><p>Online directions by default. See <a href="../classes/MappedinDirections.html#property_directionsProvider" class="crosslink">directionsProvider</a> for more options.</p>
   </div>
   
   							</li>
@@ -581,6 +582,32 @@ For example, all washroom at a given Venue could belong to one Location, or a de
           <p>Location ID.</p>
   <p>This is the internal Mappedin ID, and can be used for the lifetime of the data you get back from <a href="../classes/Mappedin.html#method_getVenue" class="crosslink">getVenue</a>, but it may not be present in future calls, even if there is another Location with otherwise similar properties.
   An ID can never be reused if it's, say, accidentally deleted. If something more durable is required, or if the data in the Mappedin CMS is being synced from somewhere else, you should finding things using the externalId property.</p>
+  
+      </div>
+  
+  
+  
+  </div>
+  <div id="property_nodeOperationHours" class="property item">
+      <h3 class="name anchorable-toc">
+          <a class="fa fa-link toc-anchor" href="#property_nodeOperationHours"></a>
+          nodeOperationHours
+      </h3>
+      <span class="type">Unknown</span>
+  
+  
+  
+  
+  
+      <div class="meta">
+                  <p>
+          </p>
+  
+  
+      </div>
+  
+      <div class="description">
+          <p>Operation hours for nodes attached to this Location.</p>
   
       </div>
   
