--- a/classes/Marker.html
+++ b/classes/Marker.html
@@ -81,7 +81,7 @@
                     <li class="panel panel-default">
                         <div class="panel-heading" role="tab" id="sidebar-version-heading">
                             <h4 class="panel-title">
-                                  Version: 1.55.1
+                                  Version: 1.69.0
                                 </a>
                             </h4>
                         </div>
@@ -171,9 +171,6 @@
                                         <a href="../classes/MapView2D.html">MapView2D</a>
                                     </li>
                                     <li>
-                                        <a href="../classes/MapView3D.html">MapView3D</a>
-                                    </li>
-                                    <li>
                                         <a href="../classes/Marker.html">Marker</a>
                                     </li>
                                     <li>
@@ -186,7 +183,16 @@
                                         <a href="../classes/SmartLabel.html">SmartLabel</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/SmartLabelBatchCreator.html">SmartLabelBatchCreator</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/TextLabel.html">TextLabel</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/ThreeJSMarkerHandle.html">ThreeJSMarkerHandle</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/Tooltip.html">Tooltip</a>
                                     </li>
                                     <li>
                                         <a href="../classes/Tween.html">Tween</a>
@@ -217,9 +223,156 @@
 </div>
 
 
+    <div class="constructor">
+        <h2>Constructor</h2>
+<div id="method_Marker" class="method item">
+	<span class="method-signature">
+	<span class="name anchorable-toc">
+		<a class="fa fa-link toc-anchor" href="#method_Marker"></a>
+		Marker
+	</span>
+
+		<div class="args">
+			<span class="paren">(</span><ul class="args-list inline commas">
+				<li class="arg">
+						<code>MapView</code>
+				</li>
+				<li class="arg">
+						<code>options</code>
+				</li>
+			</ul><span class="paren">)</span>
+		</div>
+	</span>
+
+
+
+
+
+
+
+	<div class="meta">
+				<p>
+		</p>
+
+
+
+	</div>
+
+
+		<div class="params">
+			<h4>Parameters:</h4>
+
+			<ul class="params-list">
+				<li class="param">
+						<code class="param-name">MapView</code>
+						<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
+
+
+					<div class="param-description"><p>mapView The MapView this Marker will be added to.</p>
+</div>
+
+				</li>
+				<li class="param">
+						<code class="param-name">options</code>
+						<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
+
+
+					<div class="param-description"><p>Object</p>
+</div>
+
+						<ul class="params-list">
+							<li class="param">
+									<code class="param-name">html</code>
+									<span class="type"></span>
+
+								<div class="param-description"><p>The body of the Marker. You can put any HTML in here you like.</p>
+</div>
+
+							</li>
+							<li class="param">
+									<code class="param-name">position</code>
+									<span class="type"></span>
+
+								<div class="param-description"><p>Where on the map the Marker should be anchored. You need to use one of the MapView.getPositionX functions to get a position.</p>
+</div>
+
+							</li>
+							<li class="param">
+									<code class="param-name optional">[class]</code>
+									<span class="type"></span>
+									<span class="flag optional" title="This parameter is optional.">optional</span>
+
+								<div class="param-description"><p>The name of the CSS class the Marker should inherit.</p>
+</div>
+
+							</li>
+							<li class="param">
+									<code class="param-name optional">[map=mapView.currentMap]</code>
+									<span class="type"></span>
+									<span class="flag optional" title="This parameter is optional.">optional</span>
+
+								<div class="param-description"><p>The map the Marker is attached to.</p>
+</div>
+
+							</li>
+							<li class="param">
+									<code class="param-name optional">[MarkerBuffer=2]</code>
+									<span class="type"></span>
+									<span class="flag optional" title="This parameter is optional.">optional</span>
+
+								<div class="param-description"><p>Keep this much space between this Marker and other nearby Markers.</p>
+</div>
+
+							</li>
+							<li class="param">
+									<code class="param-name optional">[lockToAnchor=false]</code>
+									<span class="type"></span>
+									<span class="flag optional" title="This parameter is optional.">optional</span>
+
+								<div class="param-description"><p>Make the Marker stay firmly attached to its anchor and not get pushed away by other Markers or camera movement. Still hits other Markers.</p>
+</div>
+
+							</li>
+							<li class="param">
+									<code class="param-name optional">[ignoreCollisions=false]</code>
+									<span class="type"></span>
+									<span class="flag optional" title="This parameter is optional.">optional</span>
+
+								<div class="param-description"><p>Allow other Markers to overlap this Marker. Combine with <code>lockToAnchor=true</code> to completely opt out of the physics engine for this Marker.</p>
+</div>
+
+							</li>
+							<li class="param">
+									<code class="param-name optional">[rotateWithCamera=false]</code>
+									<span class="type"></span>
+									<span class="flag optional" title="This parameter is optional.">optional</span>
+
+								<div class="param-description"><p>Make the Marker rotate with the rotation of the camera.</p>
+</div>
+
+							</li>
+							<li class="param">
+									<code class="param-name optional">[rotation=0]</code>
+									<span class="type"></span>
+									<span class="flag optional" title="This parameter is optional.">optional</span>
+
+								<div class="param-description"><p>Set the initial rotation of the Marker. Use this, combined with <code>rotateWithCamera=true</code> to create turn indicators that always point the right direction.</p>
+</div>
+
+							</li>
+						</ul>
+				</li>
+			</ul>
+		</div>
+
+
+</div>
+    </div>
 
   <div class="class-description">
-  <p>A Marker is a div with whatever HTML you provide, anchored it to a <code>position</code> in 3D space. Make your own with <a href="../classes/MapView.html#method_createMarker" class="crosslink">createMarker</a>.</p>
+  <p>A Marker is a div with whatever HTML you provide, anchored it to a <code>position</code> in 3D space. It will always maintain the same size on the screen.
+Make your own and add it directly to the map with <a href="../classes/MapView.html#method_createMarker" class="crosslink">createMarker</a>, or use the constructor and add it when you want.</p>
+<p>You will need to specify at least <code>options.html</code> and <code>options.position</code> to have a useful Marker.</p>
 
   </div>
 
