--- a/index.html
+++ b/index.html
@@ -1,246 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>The Mappedin Web SDK</title>
-    <meta name="description" content="An easy way to render beautiful 2D or 3D maps on your website, powered by Mappedin">
-    <link rel="stylesheet" href="http://yui.yahooapis.com/3.9.1/build/cssgrids/cssgrids-min.css">
-    <link rel="stylesheet" href="./assets/vendor/prettify/prettify-min.css">
-    <link rel="stylesheet" href="./assets/css/main.css" id="site_styles">
-    <link rel="stylesheet" href="./assets/css/custom.css">
-    <link rel="stylesheet" href="./assets/vendor/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="./assets/vendor/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./assets/css/theme.css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700' rel='stylesheet' type='text/css'>
-    
-
-      <style>
-        body a {
-          color: #ff5000;
-        }
-        body a:hover {
-          color: #ff5000;
-          opacity: 0.5;
-        }
-        .navbar.navbar-default .navbar-nav> li> a:focus, .navbar.navbar-default .navbar-nav> li> a:hover {
-          color: #ff5000;
-        }
-        .navbar.navbar-default .navbar-nav> .active> a, .navbar.navbar-default .navbar-nav> .active> a:focus, .navbar.navbar-default .navbar-nav> .active> a:hover {
-          color: #ff5000;
-        }
-        #docs-main .page-header {
-          color: #ff5000;
-        }
-        #docs-main .page-section .nav-tabs {
-          border-bottom: 1px solid #ff5000;
-        }
-        #docs-main .page-section .nav-tabs> li.active a {
-          background: #ff5000;
-          border: 1px solid #ff5000;
-        }
-        #sidebar li.panel .panel-body ol> li.active, #sidebar li.panel .panel-body ol> li:hover {
-          background: #efefef;
-        }
-      </style>
-</head>
-<body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-              <img src="./assets/img/logo.png" alt="default">
-            <span>The Mappedin Web SDK</span>
-          </a>
-        </div>
-
-        <div class="collapse navbar-collapse" id="nav">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="https://github.com/MappedIn/platform-api" class="fa fa-github github"></a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div id="main-wrapper" class="row">
-        <div id="content-wrapper">
-            <ol class="panel-group" id="sidebar" role="tablist" aria-multiselectable="true">
-                <li class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="sidebar-search-heading">
-                        <h4 class="panel-title">
-                      <a role="button" data-toggle="collapse" href="#sidebar-search" aria-expanded="true" aria-controls="collapseOne">
-                        Search
-                      </a>
-                    </h4>
-                    </div>
-                    <div id="sidebar-search" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="sidebar-search-heading">
-                        <div class="panel-body">
-                            <div id="api-tabview-filter">
-                                <input type="search" id="api-filter" placeholder="Search...">
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                    <li class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="sidebar-version-heading">
-                            <h4 class="panel-title">
-                                  Version: 1.71.6
-                                </a>
-                            </h4>
-                        </div>
-                    </li>
-                <li class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="sidebar-modules-heading">
-                        <h4 class="panel-title">
-                    <a role="button" data-toggle="collapse" href="#sidebar-modules" aria-expanded="true" aria-controls="collapseOne">
-                      Modules
-                    </a>
-                  </h4>
-                    </div>
-                    <div id="sidebar-modules" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="sidebar-modules-heading">
-                        <div class="panel-body">
-                                <ol>
-                                        <li>
-                                            <a href="./modules/Mappedin.html">Mappedin</a>
-                                        </li>
-                                </ol>
-                        </div>
-                    </div>
-                </li>
-            
-                <li class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="sidebar-classes-heading">
-                        <h4 class="panel-title">
-                      <a role="button" data-toggle="collapse" href="#sidebar-classes" aria-expanded="true" aria-controls="collapseOne">
-                        Classes
-                      </a>
-                    </h4>
-                    </div>
-                    <div id="sidebar-classes" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="sidebar-classes-heading">
-                        <div class="panel-body">
-                            <ol>
-                                    <li>
-                                        <a href="./classes/Analytics.html">Analytics</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/CameraControls.html">CameraControls</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/Easing.html">Easing</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/Mappedin.html">Mappedin</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/MappedinCategory.html">MappedinCategory</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/MappedinDirections.html">MappedinDirections</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/MappedinDirective.html">MappedinDirective</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/MappedinEvent.html">MappedinEvent</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/MappedinLocation.html">MappedinLocation</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/MappedinLocationState.html">MappedinLocationState</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/MappedinMap.html">MappedinMap</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/MappedinMapGroup.html">MappedinMapGroup</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/MappedinNode.html">MappedinNode</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/MappedinPolygon.html">MappedinPolygon</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/MappedinVenue.html">MappedinVenue</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/MappedinVortex.html">MappedinVortex</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/MapView.html">MapView</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/MapView2D.html">MapView2D</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/Marker.html">Marker</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/Navigator.html">Navigator</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/Search.html">Search</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/SmartLabel.html">SmartLabel</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/SmartLabelBatchCreator.html">SmartLabelBatchCreator</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/TextLabel.html">TextLabel</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/ThreeJSMarkerHandle.html">ThreeJSMarkerHandle</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/Tooltip.html">Tooltip</a>
-                                    </li>
-                                    <li>
-                                        <a href="./classes/Tween.html">Tween</a>
-                                    </li>
-                            </ol>
-                        </div>
-                    </div>
-                </li>
-            </ol>
-            <div class="content-container">
-                <div class="apidocs">
-                    <div id="docs-main">
-                        <div class="content">
-    <script type="text/javascript">window.location.replace("modules/Mappedin.html");</script>
-
-<div class="apidocs">
-    <div id="docs-main" class="content">
-        <div class="page-header">
-            <h1> <i class="fa fa-book" aria-hidden="true"></i> Welcome</h1>
-        </div>
-
-        <p>
-            Browse to a module or class using the sidebar to view its API documentation.
-        </p>
-
-        <h3>Keyboard Shortcuts</h3>
-
-        <ul>
-            <li><p>Press <kbd>s</kbd> to focus the API search box.</p></li>
-
-            <li><p>Use <kbd>Up</kbd> and <kbd>Down</kbd> to navigate search results.</p></li>
-
-            <li><p>Use <kbd>Enter</kbd> to select a search result.</p></li>
-        </ul>
-    </div>
-</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="./assets/vendor/prettify/prettify-min.js"></script>
-    <script>prettyPrint();</script>
-    <script src="./assets/vendor/jquery/jquery.min.js"></script>
-    <script src="./assets/vendor/jquery-ui/jquery-ui.min.js"></script>
-    <script src="./assets/vendor/bootstrap/js/bootstrap.js"></script>
-    <script src="./assets/vendor/github-slugger/slugger.js"></script>
-    <script src="./assets/js/yuidoc-bootstrap.js"></script>
-</body>
-</html>
+<meta charset="utf-8">
+<title>Redirecting to https://bob.github.io/repo/</title>
+<meta http-equiv="refresh" content="0; URL=https://developer.mappedin.com/docs/web/v1/">
+<link rel="canonical" href="https://developer.mappedin.com/docs/web/v1/">
